put cards in page thing

--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Internet Mapping</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
 
-    <div class="scroll-container">
-      <div class="scroll-area">1</div>
-      <div class="scroll-area">2</div>
+<head>
+  <meta charset="utf-8">
+  <title>Internet Mapping</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <div class="scroll-container">
+    <div class="scroll-area" style="background: #E4AD7C">1</div>
+    <div class="scroll-area" style="background: #FCF0CC">
+      <section class="content">
+        <div class="cards">
+          <div class="card">
+            <div class="card__side card__side--front card__side--front-1">
+              <div class="card__description">1</div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__description"></div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__side card__side--front card__side--front-2">
+              <div class="card__description">2</div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__description"></div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__side card__side--front card__side--front-3">
+              <div class="card__description">3</div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__description"></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
+  </div>
 
-  </body>
+</body>
+
 </html>
