--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -10,8 +10,11 @@
 <body>
 
   <div class="scroll-container">
-    <div class="scroll-area" style="background: #E4AD7C">1</div>
+    <div class="scroll-area" style="background: #E4AD7C">
+      <div class="header-bar">Internet Mapping</div>
+    </div>
     <div class="scroll-area" style="background: #FCF0CC">
+      <div class="header-bar">About</div>
       <section class="content">
         <div class="cards">
           <div class="card">
