--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -12,14 +12,23 @@
   <div class="scroll-container">
     <div class="scroll-area" style="background: #E4AD7C">
       <div class="header-bar">Internet Mapping</div>
+
+      <section class="work-area">
+        <div class="mappings">
+          <div class="mapping-internet">Address:</div>
+          <div class="mapping-wifi">Heatmap</div>
+        </div>
+      </section>
+
     </div>
     <div class="scroll-area" style="background: #FCF0CC">
       <div class="header-bar">About</div>
+
       <section class="content">
         <div class="cards">
           <div class="card">
             <div class="card__side card__side--front card__side--front-1">
-              <div class="card__description">1</div>
+              <div class="card__description">Who We Are</div>
             </div>
             <div class="card__side card__side--back card__side--back-1">
               <div class="card__description"></div>
@@ -27,7 +36,7 @@
           </div>
           <div class="card">
             <div class="card__side card__side--front card__side--front-2">
-              <div class="card__description">2</div>
+              <div class="card__description">Project Description</div>
             </div>
             <div class="card__side card__side--back card__side--back-2">
               <div class="card__description"></div>
@@ -35,7 +44,7 @@
           </div>
           <div class="card">
             <div class="card__side card__side--front card__side--front-3">
-              <div class="card__description">3</div>
+              <div class="card__description">Additional Information</div>
             </div>
             <div class="card__side card__side--back card__side--back-3">
               <div class="card__description"></div>
@@ -43,6 +52,7 @@
           </div>
         </div>
       </section>
+      
     </div>
   </div>
 
