--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Internet Mapping</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
 </head>
 
 <body>
@@ -52,7 +53,7 @@
           </div>
         </div>
       </section>
-      
+
     </div>
   </div>
 
