--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Internet Mapping</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 </head>
 
 <body>
@@ -32,7 +32,11 @@
               <div class="card__description">Who We Are</div>
             </div>
             <div class="card__side card__side--back card__side--back-1">
-              <div class="card__description"></div>
+              <div class="card__description">Group Members: Val Jarvis, Ian Wu, Ali Badza, Richard Sent
+                We are a group of senior, computer science students at Cleveland State. We are currently in CIS 454,
+                Computer Networks. This class has allowed us to explore multiple different paths of Computer Networks
+                that we have been interested in learning.
+              </div>
             </div>
           </div>
           <div class="card">
