--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -32,10 +32,12 @@
               <div class="card__description">Who We Are</div>
             </div>
             <div class="card__side card__side--back card__side--back-1">
-              <div class="card__description">Group Members: Val Jarvis, Ian Wu, Ali Badza, Richard Sent
+              <div class="card__description">
+                Group Members: Val Jarvis, Ian Wu, Ally Badza, Richard Sent</br></br>
                 We are a group of senior, computer science students at Cleveland State. We are currently in CIS 454,
-                Computer Networks. This class has allowed us to explore multiple different paths of Computer Networks
-                that we have been interested in learning.
+                Computer Networks.</br></br>
+                This class has allowed us to explore multiple different paths of ComputerNetworks that we have been
+                interested in learning.
               </div>
             </div>
           </div>
@@ -44,7 +46,13 @@
               <div class="card__description">Project Description</div>
             </div>
             <div class="card__side card__side--back card__side--back-2">
-              <div class="card__description"></div>
+              <div class="card__description">For this project, we have decided to help the everyday internet user
+                through two means. The first is creating a search feature by the user’s address to see what Internet
+                Service Providers service their area so that cost, plan types, and new technology can be easily seen and
+                filtered for. The second way is by allowing a user who seeks to use public networks by Cleveland State
+                to see what different options are best to use for a given area, or to see if they fall within a deadzone
+                of sorts. These two features go hand in hand to inform an average user in an accessible and easy to
+                understand manner of what options are best for them. </div>
             </div>
           </div>
           <div class="card">
