Revert "Title Change"
This reverts commit 978cd4979345fb8d499041d5da220d7262824ec7.

--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CSU Internet Access</title>
+  <title>Internet Mapping</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 </head>
