--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -16,7 +16,15 @@
 
       <section class="work-area">
         <div class="mappings">
-          <div class="mapping-internet">Address:</div>
+          <div class="mapping-internet">ISP Options:
+            <form class="isp">
+              <label for="address">Address:</label>
+              <input type="text" id="address" name="address">
+              <label for="city">City:</label>
+              <input type="text" id="city" name="city">
+              <label for="city">Zip Code:</label>
+              <input type="text" id="Zip Code" name="Zip Code">
+          </div>
           <div class="mapping-wifi">Heatmap</div>
         </div>
       </section>
