--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -22,8 +22,10 @@
               <input type="text" id="address" name="address">
               <label for="city">City:</label>
               <input type="text" id="city" name="city">
-              <label for="city">Zip Code:</label>
-              <input type="text" id="Zip Code" name="Zip Code">
+              <label for="zip">Zip Code:</label>
+              <input type="text" id="zip" name="zip">
+              <button type="submit">Submit</button>
+            </form>
           </div>
           <div class="mapping-wifi">Heatmap</div>
         </div>
@@ -76,6 +78,23 @@
 
     </div>
   </div>
+
+  <script>
+
+    function handleSubmit(event) {
+      event.preventDefault();
+
+      const data = new FormData(event.target);
+      const value = data.get('zip');
+
+      console.log({ value });
+    }
+
+    const form = document.querySelector('form');
+    form.addEventListener('submit', handleSubmit);
+
+
+  </script>
 
 </body>
 
