--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -17,7 +17,7 @@
       <section class="work-area">
         <div class="mappings">
           <div class="mapping-internet">ISP Options:
-            <form class="isp">
+            <form class="isp" onsubmit="return false">
               <label for="address">Address:</label>
               <input type="text" id="address" name="address">
               <label for="city">City:</label>
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <script>
+  <script type="text/javascript">
 
     function handleSubmit(event) {
       event.preventDefault();
@@ -87,7 +87,7 @@
       const data = new FormData(event.target);
       const value = data.get('zip');
 
-      console.log({ value });
+      console.log("clicked");
     }
 
     const form = document.querySelector('form');
