--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -102,10 +102,10 @@
       var cell3 = row.insertCell(2);
       var cell4 = row.insertCell(3);
 
-      cell1.innerHTML = "ISP";
-      cell2.innerHTML = "Plan Name";
-      cell3.innerHTML = "Speed";
-      cell4.innerHTML = "Price";
+      cell1.outerHTML = "<th>ISP</th>";
+      cell2.outerHTML = "<th>Plan Name</th>";
+      cell3.outerHTML = "<th>Speed</th>";
+      cell4.outerHTML = "<th>Price</th>";
 
 
       const data = new FormData(event.target);
