Update Font Color

--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -57,12 +57,12 @@
               <div class="card__description">Project Description</div>
             </div>
             <div class="card__side card__side--back card__side--back-2">
-              <div class="card__description">For this project, we have decided to help the everyday internet user
-                through two means. The first is creating a search feature by the user’s address to see what Internet
+              <div class="card__description" id="special">For this project, we have decided to help the everyday internet user
+                through two means.<br><br>The first is creating a search feature by the user’s address to see what Internet
                 Service Providers service their area so that cost, plan types, and new technology can be easily seen and
-                filtered for. The second way is by allowing a user who seeks to use public networks by Cleveland State
+                filtered for.<br><br>The second way is by allowing a user who seeks to use public networks by Cleveland State
                 to see what different options are best to use for a given area, or to see if they fall within a deadzone
-                of sorts. These two features go hand in hand to inform an average user in an accessible and easy to
+                of sorts.<br><br>These two features go hand in hand to inform an average user in an accessible and easy to
                 understand manner of what options are best for them. </div>
             </div>
           </div>
