--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -47,7 +47,7 @@
             </form>
             <table id="table"></table>
           </div>
-          <div class="mapping-wifi" id="mapping-wifi">Heatmap
+          <div class="mapping-wifi" id="mapping-wifi">
             <div class="folium-map" id="map_d3da4827e7034a498b92f35a7aa4daa9"></div>
           </div>
         </div>
